2008-04-24  Stefan Monnier  <monnier@iro.umontreal.ca>

	* international/quail.el (quail-build-decode-map): Avoid string-bytes.

	* textmodes/ispell.el (ispell-dictionary-alist-1)
	(ispell-dictionary-alist-2, ispell-dictionary-alist-3):
	(ispell-dictionary-alist-4, ispell-dictionary-alist-5):
	(ispell-dictionary-alist-6): Remove.
	(ispell-dictionary-base-alist): New var, merges the above.
	(ispell-find-aspell-dictionaries, ispell-set-spellchecker-params):
	Use it.
	(ispell-dictionary-alist): Default to nil.  Remove autoload.
	(ispell-local-dictionary-alist): Remove autoload.

	* progmodes/f90.el (f90-mode-syntax-table): Don't set ` as word syntax.
	(f90-mode-abbrev-table): Use the new :regexp feature.
	Merge defvar and mapc into define-abbrev-table.
	(f90-imenu-type-matcher): Remove unused `l'.
	(f90-imenu-generic-expression): Remove unused `not-ib'.
	(f90-prepare-abbrev-list-buffer): Use with-current-buffer.
	(f90-change-keywords): Use restore-buffer-modified-p.

2008-04-24  Glenn Morris  <rgm@gnu.org>

	* net/goto-addr.el (goto-address-prog-mode):
	* progmodes/bug-reference.el (bug-reference-prog-mode):
	Define for compiler.

	* minibuffer.el (x-file-dialog): Declare as function.

	* progmodes/vhdl-mode.el (vhdl-speedbar-find-file): Use
	dframe-update-speed rather than obsolete alias speedbar-update-speed.

	* calendar/cal-menu.el (cal-menu-diary-menu): Fix typo.
	(cal-menu-scroll-menu): Use commands rather than key macros, which don't
	work with easymenu.  Add :keys where needed.

	* calendar/cal-move.el (calendar-scroll-left): Handle case when
	event-start is nil.

	* calendar/calendar.el (calendar-mode-map): Fix typo.

2008-04-24  Tom Tromey  <tromey@redhat.com>

	* emacs-lisp/easy-mmode.el (easy-mmode-define-keymap):
	Document keywords.  Add :suppress.
	* pcvs-defs.el (cvs-mode-map): Use :suppress.

	* net/goto-addr.el (goto-address-unfontify): New function.
	(goto-address-fontify): Use it.	 Respect goto-address-prog-mode.